--- a/static_bv_client/src/styles/code.css
+++ b/static_bv_client/src/styles/code.css
@@ -86,6 +86,11 @@
 }
 
 
+.hljs-meta {
+    color: #9b9b9b;;
+}
+
+
 .hljs-meta-keyword {
     color: #9b9b9b;
 }
@@ -98,8 +103,6 @@
 .hljs-built_in {
     color: #afaef2;
 }
-
-
 
 
 .hljs-attr {
@@ -155,12 +158,6 @@
     color: #61aeee;
 }
 
-
-.hljs-meta {
-    color: #61aeee;
-}
-
-
 .hljs-selector-id {
     color: #61aeee;
 }
@@ -194,4 +191,3 @@
 .hljs-function .hljs-title {
     color: #c4bf81;
 }
-  
